// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Radio /> Snapshots renders a Radio with a label and description correctly 1`] = `
.emotion-14 {
  position: relative;
  line-height: 1rem;
}

.emotion-8 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-0 {
  position: absolute;
  width: 1rem;
  height: 1rem;
  top: 0;
  left: 0;
  opacity: 0;
  padding: 0;
  margin: 0;
  z-index: 1;
}

.emotion-0:checked + .emotion-5 {
  background: #2875c6;
  border-color: #1d5794;
}

.emotion-0:not(:checked) + .emotion-5 > .emotion-3 {
  display: none;
}

.emotion-0:focus + .emotion-5 {
  box-shadow: 0 0 0 1px #fff,0 0 0 3px #2875c6;
}

.emotion-0[disabled] + .emotion-5 {
  opacity: 0.5;
  box-shadow: none;
}

.emotion-4 {
  position: relative;
  width: 1rem;
  height: 1rem;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  border-radius: 50%;
  background-color: transparent;
  border: solid 1px #abb3b3;
  box-sizing: border-box;
  overflow: hidden;
  background: #fff linear-gradient(180deg,#fff,#f3f3f3);
}

.emotion-2 {
  position: absolute;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  width: 0.375rem;
  height: 0.375rem;
  border-radius: 50%;
  background: #fff linear-gradient(180deg,#fff,#f3f3f3);
}

.emotion-6 {
  margin: 0;
  font-weight: 700;
  margin-left: 0.75rem;
  font-size: 0.875rem;
  line-height: 1.125rem;
  font-weight: 700;
  color: #0c0d0d;
}

.emotion-12 {
  margin-left: 1rem;
}

.emotion-12 .emotion-11 {
  color: #848a8a;
}

.emotion-10 {
  margin: 0;
  margin-left: 0.75rem;
  font-size: 0.875rem;
  line-height: 1.125rem;
}

<div
  className="emotion-14 emotion-15"
>
  <label
    className="emotion-8 emotion-9"
    htmlFor="Radio"
    role="presentation"
  >
    <input
      aria-describedby="Radio-description"
      aria-labelledby="Radio-label"
      checked={false}
      className="emotion-0 emotion-1"
      id="Radio"
      onChange={[MockFunction]}
      type="radio"
      value="value"
    />
    <div
      className="emotion-4 emotion-5"
    >
      <div
        className="emotion-2 emotion-3"
        data-testid="radio-centermark"
      />
    </div>
    <div
      className="emotion-6 emotion-7"
      fontWeight="bold"
      id="Radio-label"
      size="small"
    >
      Label
    </div>
  </label>
  <div
    className="emotion-12 emotion-13"
  >
    <div
      className="emotion-10 emotion-11"
      id="Radio-label"
      size="small"
    >
      Description
    </div>
  </div>
</div>
`;

exports[`<Radio /> Snapshots renders a checked Radio correctly 1`] = `
.emotion-8 {
  position: relative;
  line-height: 1rem;
}

.emotion-6 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-0 {
  position: absolute;
  width: 1rem;
  height: 1rem;
  top: 0;
  left: 0;
  opacity: 0;
  padding: 0;
  margin: 0;
  z-index: 1;
}

.emotion-0:checked + .emotion-5 {
  background: #2875c6;
  border-color: #1d5794;
}

.emotion-0:not(:checked) + .emotion-5 > .emotion-3 {
  display: none;
}

.emotion-0:focus + .emotion-5 {
  box-shadow: 0 0 0 1px #fff,0 0 0 3px #2875c6;
}

.emotion-0[disabled] + .emotion-5 {
  opacity: 0.5;
  box-shadow: none;
}

.emotion-4 {
  position: relative;
  width: 1rem;
  height: 1rem;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  border-radius: 50%;
  background-color: transparent;
  border: solid 1px #abb3b3;
  box-sizing: border-box;
  overflow: hidden;
  background: #fff linear-gradient(180deg,#fff,#f3f3f3);
}

.emotion-2 {
  position: absolute;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  width: 0.375rem;
  height: 0.375rem;
  border-radius: 50%;
  background: #fff linear-gradient(180deg,#fff,#f3f3f3);
}

<div
  className="emotion-8 emotion-9"
>
  <label
    className="emotion-6 emotion-7"
    htmlFor="Radio"
    role="presentation"
  >
    <input
      aria-describedby={null}
      aria-labelledby={null}
      checked={true}
      className="emotion-0 emotion-1"
      id="Radio"
      onChange={[MockFunction]}
      type="radio"
      value="value"
    />
    <div
      className="emotion-4 emotion-5"
    >
      <div
        className="emotion-2 emotion-3"
        data-testid="radio-centermark"
      />
    </div>
  </label>
</div>
`;

exports[`<Radio /> Snapshots renders a disabled Radio correctly 1`] = `
.emotion-8 {
  position: relative;
  line-height: 1rem;
}

.emotion-6 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-0 {
  position: absolute;
  width: 1rem;
  height: 1rem;
  top: 0;
  left: 0;
  opacity: 0;
  padding: 0;
  margin: 0;
  z-index: 1;
}

.emotion-0:checked + .emotion-5 {
  background: #2875c6;
  border-color: #1d5794;
}

.emotion-0:not(:checked) + .emotion-5 > .emotion-3 {
  display: none;
}

.emotion-0:focus + .emotion-5 {
  box-shadow: 0 0 0 1px #fff,0 0 0 3px #2875c6;
}

.emotion-0[disabled] + .emotion-5 {
  opacity: 0.5;
  box-shadow: none;
}

.emotion-4 {
  position: relative;
  width: 1rem;
  height: 1rem;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  border-radius: 50%;
  background-color: transparent;
  border: solid 1px #abb3b3;
  box-sizing: border-box;
  overflow: hidden;
  background: #fff linear-gradient(180deg,#fff,#f3f3f3);
}

.emotion-2 {
  position: absolute;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  width: 0.375rem;
  height: 0.375rem;
  border-radius: 50%;
  background: #fff linear-gradient(180deg,#fff,#f3f3f3);
}

<div
  className="emotion-8 emotion-9"
>
  <label
    className="emotion-6 emotion-7"
    htmlFor="Radio"
    role="presentation"
  >
    <input
      aria-describedby={null}
      aria-labelledby={null}
      checked={false}
      className="emotion-0 emotion-1"
      disabled={true}
      id="Radio"
      onChange={[MockFunction]}
      type="radio"
      value="value"
    />
    <div
      className="emotion-4 emotion-5"
    >
      <div
        className="emotion-2 emotion-3"
        data-testid="radio-centermark"
      />
    </div>
  </label>
</div>
`;

exports[`<Radio /> Snapshots renders a simple Radio correctly 1`] = `
.emotion-8 {
  position: relative;
  line-height: 1rem;
}

.emotion-6 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-0 {
  position: absolute;
  width: 1rem;
  height: 1rem;
  top: 0;
  left: 0;
  opacity: 0;
  padding: 0;
  margin: 0;
  z-index: 1;
}

.emotion-0:checked + .emotion-5 {
  background: #2875c6;
  border-color: #1d5794;
}

.emotion-0:not(:checked) + .emotion-5 > .emotion-3 {
  display: none;
}

.emotion-0:focus + .emotion-5 {
  box-shadow: 0 0 0 1px #fff,0 0 0 3px #2875c6;
}

.emotion-0[disabled] + .emotion-5 {
  opacity: 0.5;
  box-shadow: none;
}

.emotion-4 {
  position: relative;
  width: 1rem;
  height: 1rem;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  border-radius: 50%;
  background-color: transparent;
  border: solid 1px #abb3b3;
  box-sizing: border-box;
  overflow: hidden;
  background: #fff linear-gradient(180deg,#fff,#f3f3f3);
}

.emotion-2 {
  position: absolute;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  width: 0.375rem;
  height: 0.375rem;
  border-radius: 50%;
  background: #fff linear-gradient(180deg,#fff,#f3f3f3);
}

<div
  className="emotion-8 emotion-9"
>
  <label
    className="emotion-6 emotion-7"
    role="presentation"
  >
    <input
      aria-describedby={null}
      aria-labelledby={null}
      checked={false}
      className="emotion-0 emotion-1"
      onChange={[MockFunction]}
      type="radio"
    />
    <div
      className="emotion-4 emotion-5"
    >
      <div
        className="emotion-2 emotion-3"
        data-testid="radio-centermark"
      />
    </div>
  </label>
</div>
`;
